src/assets/style/_default.scss
body {
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
}


#__nuxt,
#__layout {
  width: 100%;
  height: max-content;
  min-height: 100vh;

  /* Avoid Chrome to see Safari hack */
  @supports (-webkit-touch-callout: none) {
    /* The hack for Safari */
    //noinspection CssInvalidPropertyValue
    min-height: -webkit-fill-available;
  }
}

main.layout.defaultLayout {
  max-height: 100%;
  overflow: hidden;
  padding: 40px 0 70px;
}

/**
 * Only for the desktops
 */
@media (min-width: $tablet) {
  main.layout.defaultLayout {
    max-height: 100%;
    display: flex;
    padding: 60px 0 60px;
    justify-content: stretch;
    height: 100vh;
    /* Avoid Chrome to see Safari hack */
    @supports (-webkit-touch-callout: none) {
      /* The hack for Safari */
      //noinspection CssInvalidPropertyValue
      min-height: -webkit-fill-available;
    }

    @media (min-width: 1200px)
    {
      padding-bottom: 0;
    }

    section.layout-content.layoutContent {
      display: flex;
      overflow: hidden;

      .routerContainer {
        overflow: hidden;
        display: flex;
        flex-direction: column;

        .dappPageWrapper {
          overflow-y: auto !important;
          height: max-content;
        }
      }
    }

    .tileBlock {
      margin: 0 auto !important;
    }

    .balancesList {
      margin: 0 !important;
    }
  }
  .bn-onboard-custom.bn-onboard-modal-content {
    align-self: center;
  }
}

#__layout {
  display: flex;
}

#nuxt-loading {
  background-color: $darkViolet !important;
}

head {
  display: none;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
}

input[type="number"] {
  -moz-appearance: textfield;
}

.secondaryText {
  color: $gray;
  font-size: 16px;
}

.mobileOnly {

  @media screen and (min-width: $mobile) {
    display: none !important;
  }
}

.desktopOnly {

  @media screen and (max-width: $mobile+1) {
    display: none !important;
  }
}

.linkText {
  color: $violet;
  font-weight: 500;
  font-size: 16px;
  cursor: pointer;

  &:hover {
    filter: brightness(125%);
    text-decoration: none !important;
  }
}

.border-line {
  background-color: transparentize($color: $gray, $amount: 0.8);
  width: 100%;
  height: 1px;
}

body.inkline {
  .button {
    &.-link {
      padding: 7px 12px;
      color: $lightViolet !important;
      text-decoration: none !important;
      border-radius: $borderRadiusSm;
      transition: background-color $transition1;
    }

    &.-secondary {
      &:disabled {
        opacity: 0.3;
      }
    }

    &.-dark {
      &:disabled {
        background-color: $violet;
        opacity: 0.4 !important;
      }
    }
  }

  &.-light {
    background-color: $mediumGrey;

    .projectLogo {
      .logoLetter {
        fill: $tempDarkBlue;
      }
    }

    .button {
      &.-link {
        &:hover {
          background-color: transparentize($color: $gray, $amount: 0.8) !important;
        }
      }
    }
  }

  &.-dark {
    background-color: $tempDarkBlue;

    .linkText {
      color: $lightViolet;
    }

    .projectLogo {
      .logoLetter {
        fill: $mediumGrey;
      }
    }

    .button {
      &.-link {
        &:hover {
          background-color: #ffffff14 !important;
        }
      }
    }
  }
}

button.-lg.-circle {
  .inkline-icon {
    line-height: 1.9;
  }
}

.popover {
  border: none !important;
  border-radius: $borderRadius !important;
  box-shadow: $popoverShadow;
  opacity: 0.975;

  &.-dark {
    background-color: $darkViolet !important;

    &[data-popper-placement^="right"] {
      .arrow,
      .arrow::after {
        border-right-color: $darkViolet !important;
      }
    }

    &[data-popper-placement^="left"] {
      .arrow,
      .arrow::after {
        border-left-color: $darkViolet !important;
      }
    }

    &[data-popper-placement^="bottom"] {
      .arrow,
      .arrow::after {
        border-bottom-color: $darkViolet !important;
      }
    }

    &[data-popper-placement^="top"] {
      .arrow,
      .arrow::after {
        border-top-color: $darkViolet !important;
      }
    }
  }

  &.-light {
    background-color: $white !important;

    &[data-popper-placement^="right"] {
      .arrow,
      .arrow::after {
        border-right-color: $white !important;
      }
    }

    &[data-popper-placement^="left"] {
      .arrow,
      .arrow::after {
        border-left-color: $white !important;
      }
    }

    &[data-popper-placement^="bottom"] {
      .arrow,
      .arrow::after {
        border-bottom-color: $white !important;
      }
    }

    &[data-popper-placement^="top"] {
      .arrow,
      .arrow::after {
        border-top-color: $white !important;
      }
    }
  }
}

.modal-wrapper {
  position: absolute !important;

  &.prevent-close {
    .modal {
      &::before {
        position: absolute;
        top: 0;
        left: 0;
        z-index: -1;
        width: 100%;
        height: 100%;
        content: "";
      }
    }
  }
}

.modal {
  &.-md {
    > .header {
      font-weight: 400;
      font-size: 1.5rem;
      font-family: $firaSans;


      & > .close {
        width: 2.2rem !important;
        height: 2.2rem !important;
        line-height: 2rem !important;

      }

      @media (max-width: $mobile) {
        display: flex;
        align-items: center;
        justify-content: space-between;
        font-size: 1rem;
      }
    }

    .header,
    .footer,
    .body {
      padding-right: 28px !important;
      padding-left: 28px !important;
    }

    & > div:last-child {
      border-radius: 0 0 $borderRadius $borderRadius;
    }
  }

  &.-light {
    &.-md > .header > .close::before {
      color: $gray !important;
    }

    .header,
    .footer,
    .body {
      border-color: $light !important;
    }

    .footer,
    .body {
      background: $modal-background-light !important;
      border-color: $light !important;
    }

    .modalFooterBtn {
      color: $black;
    }

    .close .icon {
      line-height: 18px;
      font-size: 18px;
    }
  }

  &.-dark {
    .header,
    .footer,
    .body {
      border-color: $modal-border-color-dark !important;
    }

    .footer,
    .body {
      background: $modal-background-dark !important;
      border-color: $modal-border-color-dark !important;
    }

    .header {
      background: $modal-background-dark !important;
    }

    .close .icon {
      line-height: 18px;
      font-size: 18px;
      color: $white;
    }
  }

  .header {
    border-bottom: none !important;
  }

  .modalFooterBtn {
    display: flex;
    flex-wrap: nowrap;
    align-items: center;
    box-sizing: border-box;
    margin: 3px 0;
    padding: 6px 15px;
    color: $white;
    text-decoration: none;
    border-radius: $borderRadius;
    cursor: pointer;
    transition: background-color $transition1;

    &.big {
      i {
        font-size: 20px;
      }

      span {
        font-size: 18px;
      }
    }

    &:hover {
      background-color: transparentize($color: $gray, $amount: 0.8);
    }

    svg {
      margin-right: 10px;
    }

    span {
      font-size: $fontSizeRegular;
      text-align: left;
    }
  }

  .body {
    border-top: none !important;

    p {
      margin: 0 0 15px;
      line-height: 1.4;
    }
  }
}

.form-input-group {
  .form-input {
    input {
      font-size: 1.15rem !important;
    }
  }

  &.-light {
    .form-input {
      input {
        background-color: $input-background-light !important;
        border-color: $input-border-color-light !important;
        box-shadow: none !important;

        &:focus {
          border-color: $input-border-color-focus-light !important;
        }
      }
    }

    .form-input-append {
      background-color: transparent !important;

      &:hover {
        background-color: rgba(0, 0, 0, 0.01961) !important;
      }
    }
  }

  &.-dark {
    .form-input {
      input {
        background-color: $input-background-dark !important;
        border-color: $input-border-color-dark !important;

        &:focus {
          border-color: $input-border-color-focus-dark !important;
        }
      }
    }

    .form-input-append {
      background-color: transparent !important;

      &:hover {
        background-color: $mediumViolet !important;
      }
    }
  }

  .form-input.-prefixed input {
    padding-left: 3rem !important;
  }
}

.form-group {
  &.-radio {
    margin: 15px 0;

    /* display: flex;
    flex-direction: column;

    label {
        width: 100%;
    } */
  }
}

.form-check.-radio {
  //white-space: pre-line !important;
  &:not(:last-child) {
    margin-bottom: 15px;
  }

  .form-input-label {
    padding-left: 35px !important;
    cursor: pointer;

    &::before {
      width: 20px !important;
      height: 20px !important;
      background-color: transparent !important;
      border: 1px solid $input-border-color-focus-dark;
    }

    &::before,
    &::after {
      top: 2.5px !important;
    }
  }

  input:checked ~ .form-input-label {
    &::before {
      background-color: $green !important;
    }

    &::after {
      width: 10px !important;
      height: 10px !important;
      background-color: $white !important;
      transform: translateX(5px) translateY(5px) !important;
      content: "" !important;
    }
  }

  .form-input-label {
    outline: none;
  }
}

.form-check.-checkbox {
  label {
    outline: none;
  }

  input:checked ~ .form-input-label::before {
    background-color: $lightViolet !important;
  }
}

.recaptchaContainer {
  & > div {
    margin: 0 auto;
  }
}

.tokenSymbol,
.walletAddress {
  font-weight: 400;
  font-family: $firaCode;
}

.h1 {
  font-weight: 400 !important;
  font-family: $firaSans;
}

.h2 {
  font-weight: 600 !important;
  font-family: $firaSans;
}

._margin-top-05 {
  margin-top: 0.5em;
}
._margin-left-05 {
  margin-left: 0.4em;
}

.grid-cols-2 {
  display: grid;
  height: max-content;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: 100%;
  grid-gap: 15px;

  @media screen and (max-width: $mobile) {
    grid-gap: 10px;
    grid-template-columns: 100%;
    grid-template-rows: repeat(2, 1fr);
  }
}

